updated dependencies, and fixed some card layout issues

--- a/static/main.css
+++ b/static/main.css
@@ -80,6 +80,7 @@ footer {
   position: fixed;
   bottom: 0;
   text-align: center;
+  background-color: #FFF;
   width: 100%;
   font-weight: 700;
   padding: 0.5rem 1rem;
